# personal-assistant

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  compose.yml
.claude/agents/: code-quality.md  doc-alignment.md  expert-debugger.md  pattern-auditor.md
.claude/rules/: architecture.md  development-patterns.md  testing.md
.claude/skills/audit/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/pr-address-review/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/proposal-author/: SKILL.md
.claude/skills/subagent-scaffold/: SKILL.md
.claude/skills/trigger-wire/: SKILL.md
.github/workflows/: claude-review.yml
agent/: Dockerfile  README.md  pyproject.toml
agent/src/personal_assistant_agent/: cli.py  models.py
agent/src/personal_assistant_agent/agents/: intake_agent.py  journal_agent.py  root.py
agent/src/personal_assistant_agent/tools/: linear_cli.py  proposal_enqueue.py  vault_read.py
agent/tests/: test_intake_agent.py  test_journal_agent.py  test_linear_cli.py  test_proposal_enqueue.py  test_root.py  test_vault_read.py
config/: providers.yaml.example  user.yaml.example
docs/: ARCHITECTURE.md  BUDGET.md  DEVOPS.md  GETTING_STARTED.md  LINEAR_CONVENTIONS.md  PROPOSAL_FORMAT.md  VAULT_ORGANIZATION.md
executor/: README.md  go.mod
executor/cmd/executor/: main.go
scripts/: seed_v1_backlog.py
sync/: README.md  go.mod
sync/cmd/sync/: main.go
tools/: linear
tools/linear-pm/: package-lock.json  package.json  tsconfig.json
tools/linear-pm/src/: linear-cli.ts
