[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-assistant-agent"
version = "0.0.1"
description = "NeMo-based agent core for personal-assistant"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Taylor" }]

dependencies = [
  # NeMo Agent Toolkit — core + LangChain integration for tool-calling style agents.
  "nvidia-nat[langchain]>=1.0",
  # Provider SDK for v0.
  "anthropic>=0.40",
  # Config + CLI + filesystem primitives.
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "watchfiles>=0.22",
]

[dependency-groups]
# PEP 735. `uv sync` installs the `dev` group by default; pass `--no-dev`
# to get a production-only env.
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
personal-assistant-agent = "personal_assistant_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_assistant_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
